deployment/kubernetes/app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: loginapp
  name: loginapp-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: loginapp-app
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: loginapp-app
    spec:
      containers:
      - image: pablo06/oneidp:latest
        imagePullPolicy: Always
        name: loginapp-app
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: "50m"
            memory: "80Mi"
          limits:
            cpu: "80m"
            memory: "120Mi"
---
apiVersion: v1
kind: Service
metadata:
  namespace: loginapp
  name: loginapp-app-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: loginapp-app
