deployment/kubernetes/database-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loginapp-postgres
  namespace: loginapp
spec:
  selector:
    matchLabels:
      app: loginapp-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: loginapp-postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: loginapp-postgres
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: loginapp-postgres
        persistentVolumeClaim:
          claimName: loginapp-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: loginapp-postgres-svc
  namespace: loginapp
spec:
  selector:
    app: loginapp-postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
