deployment/kubernetes/ingress-deployment.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: loginapp
  name: loginapp-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: oneidp.ch
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: loginapp-app-svc
              port:
                number: 8080
  tls:
  - hosts:
    - oneidp.ch
    secretName: oneidp-ch-tls
